--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
     <div id="wakeword_panel" class="records_panel">
       <span>Name: </span>
       <input id="wakeword_name" type="text" autocomplete="false" />
+      <div class="input_container">
+        <label for="mic_gain">Microphone Gain: </label>
+        <output>1</output>
+        <input type="range" id="mic_gain" min="0.1" max="1" value="1" step="0.1"
+          oninput="this.previousElementSibling.value = this.value">
+      </div>
+      <div class="input_container">
+        <label for="mic_gain">Stop Seconds: </label>
+        <input id="stop_sec" type="number" autocomplete="false" min="1" />
+      </div>
       <div id="btn_panel" class="btn-panel">
         <button id="record" disabled="true" type="button">Start Recording</button>
         <button id="stop" disabled="true" type="button">Stop Recording</button>
