--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     </div>
     <br>
     <div class="text">
-      <span>This is a demo website for </span><a href="https://github.com/GiviMAD/rustpotter">Rustpotter</a><span>,
-        an open source wakeword spotter forged in rust.</span>
+      <span>This is a demo website for </span><a href="https://github.com/GiviMAD/rustpotter">Rustpotter</a><span>, an open source wakeword spotter forged in rust.</span>
+      <br>
+      <span>Allows to take records to create wakeword references.</span>
+      <br>
+      <span>To train wakeword models you can use the </span><a href="https://github.com/GiviMAD/rustpotter-cli">command line utility</a><span>.</span>
       <br>
     </div>
   </div>
